.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coleman-access-svc
spec:
  selector:
    app: coleman-access
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
