.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coleman-access-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - particuliers.dev.insee.io
  rules:
    - host: particuliers.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coleman-access-svc
                port:
                  number: 80
